--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -3,7 +3,35 @@
     padding: 5px;
     font-size: 8pt;
     z-index: 1000;
-    background-color: white
+    background-color: white;
+}
+
+#helpBox{
+	border-radius:5px;
+	padding:5px;
+	width:300px;
+	position:absolute;
+	background-color: #CCFFFF;
+	padding: 5px;
+    font-size: 8pt;
+    top: 100px;
+}
+
+#closeHelpBox {
+	border-radius: 2px;
+	cursor: default;
+    float:right;
+    display:inline-block;
+    padding:2px 5px;
+    background:#66CCFF;
+}
+
+#closeHelpBox:hover {
+    float:right;
+    display:inline-block;
+    padding:2px 5px;
+    background:#f00;
+    color:#fff;
 }
 
 p{
