--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -114,7 +114,6 @@ hr {
     padding: 0; 
 }
 
-
 #fcPlot{
 	width: 80%;
     min-width: 850px;
@@ -122,11 +121,11 @@ hr {
 	display:inline-block;
 }
 
-#fc-tabs-1 > * {
+#tabHydrograph > * {
     vertical-align:middle;  // Align children to middle of line
 }
 
-#fc-tabs-1{
+#tabHydrograph{
 	height: 50%;
 	min-width: 1000px;
 }
