modified floodeventselect dropdown menu such that nonexistent flood events are disabled from selection

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -25,6 +25,9 @@
     padding:2px 5px;
     background:#66CCFF;
 }
+/*.optFloodEvent{
+	display: none;
+}*/
 
 #closeHelpBox:hover {
     float:right;
