--- a/assets/css/scvwdflood.css
+++ b/assets/css/scvwdflood.css
@@ -25,9 +25,9 @@
     padding:2px 5px;
     background:#66CCFF;
 }
-/*.optFloodEvent{
+.optFloodEvent{
 	display: none;
-}*/
+}
 
 #closeHelpBox:hover {
     float:right;
